@@ -5,9 +5,6 @@ WITH_KRB5ROOT
 AC_SET_BUILDTOP
 AC_HAVE_LIBRARY(socket)
 AC_HAVE_LIBRARY(nsl)
-AC_HAVE_LIBRARY(ndbm, DBMLIB="-lndbm")
-AC_HAVE_LIBRARY(dbm, DBMLIB="-ldbm")
-AC_SUBST(DBMLIB)
 KRB_INCLUDE
 ISODE_INCLUDE
 AC_OUTPUT(Makefile,[EXTRA_RULES])
